[tool.poetry]
name = "pyenv-poetry-example"
version = "0.1.0"
description = ""
authors = ["FrederikNiesner <frederik.niesner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyleniumio = "^1.12.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.1"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
